Microsoft Edge Browser issues rendering 'stories on the road' block #227 (#241)
* fix edge case with Intersection Observer API, Edge on Windows
* fix horizontal scrollbar issues

--- a/blocks/v2-stories-carousel/v2-stories-carousel.css
+++ b/blocks/v2-stories-carousel/v2-stories-carousel.css
@@ -251,12 +251,12 @@ ul.v2-stories-carousel-meta {
 
   .v2-stories-carousel::after {
     background: linear-gradient(90deg, rgb(255 255 255 / 0%) 0%, rgb(255 255 255 / 100%) 100%);
-    right: -1px;
+    right: 0;
   }
 
   .v2-stories-carousel::before {
     background: linear-gradient(270deg, rgb(255 255 255 / 0%) 0%, rgb(255 255 255 / 100%) 100%);
-    left: -1px;
+    left: 0;
   }
 
   .v2-stories-carousel-arrowcontrols button {
